--- a/assignments/assignment1/KNN.ipynb
+++ b/assignments/assignment1/KNN.ipynb
@@ -3599,19 +3599,244 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4] 0\n",
+      "800 200\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[6] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[6] [1]\n",
+      "[6] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[6] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[6] [1]\n",
+      "[6] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[6] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "[4] [1]\n",
+      "Accuracy: 0.10\n",
+      "[0, 2, 3, 4] 1\n",
+      "800 200\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-131-247366f3428e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     25\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ml_train_X\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ml_test_X\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m         \u001b[0mknn_classifier\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ml_train_X\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ml_train_y\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m         \u001b[0mprediction\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mknn_classifier\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ml_test_X\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m         \u001b[0macc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmulticlass_accuracy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprediction\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ml_test_y\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/projects/dlcourse_ai/assignments/assignment1/knn.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, X, num_loops)\u001b[0m\n\u001b[1;32m     27\u001b[0m         '''\n\u001b[1;32m     28\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mnum_loops\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m             \u001b[0mdists\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompute_distances_no_loops\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mnum_loops\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m             \u001b[0mdists\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompute_distances_one_loop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/projects/dlcourse_ai/assignments/assignment1/knn.py\u001b[0m in \u001b[0;36mcompute_distances_no_loops\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    100\u001b[0m         \u001b[0;31m# TODO: Implement computing all distances with no loops!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    101\u001b[0m         \u001b[0;31m#dists = np.sum(np.abs(self.train_X.reshape(-1, num_features, 1) - X.reshape(-1, num_features, 1).T).reshape(-1, num_test).T.reshape(-1, num_features), axis=1).reshape(num_test, num_train)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 102\u001b[0;31m         \u001b[0mdists\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain_X\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    103\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mdists\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    104\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# Find the best k using cross-validation based on F1 score\n",
     "num_folds = 5\n",
-    "s = split(list(range(binary_train_X.shape[0])), binary_train_X.shape[0] // 5)\n",
+    "s = split(list(range(train_X.shape[0])), train_X.shape[0] // 5)\n",
     "train_folds_X = [train_X[s[i]] for i in range(5)]\n",
     "train_folds_y = [train_y[s[i]] for i in range(5)]\n",
     "\n",
     "# TODO: split the training data in 5 folds and store them in train_folds_X/train_folds_y\n",
     "\n",
-    "k_choices = [1, 2, 3, 5, 8, 10, 15, 20, 25, 50]\n",
+    "# k_choices = [1, 2, 3, 5, 8, 10, 15, 20, 25, 50]\n",
     "k_to_f1 = {}  # dict mapping k values to mean F1 scores (int -> float)\n",
     "\n",
     "for k in k_choices:\n",
@@ -3623,23 +3848,22 @@
     "    for test_f, train_f in ind(num_folds):\n",
     "        print(train_f, test_f)\n",
     "        knn_classifier = KNN(k=k)\n",
-    "        l_train_X = np.array(functools.reduce(operator.iconcat, [binary_train_X[s[i]] for i in train_f], []))\n",
-    "        l_train_y = np.array(functools.reduce(operator.iconcat, [binary_train_y[s[i]] for i in train_f], []))\n",
-    "        l_test_X = np.array(binary_train_X[s[test_f]])\n",
-    "        l_test_y = np.array(binary_train_y[s[test_f]])\n",
+    "        l_train_X = np.array(functools.reduce(operator.iconcat, [train_X[s[i]] for i in train_f], []))\n",
+    "        l_train_y = np.array(functools.reduce(operator.iconcat, [train_y[s[i]] for i in train_f], []))\n",
+    "        l_test_X = np.array(train_X[s[test_f]])\n",
+    "        l_test_y = np.array(train_y[s[test_f]])\n",
     "        print(len(l_train_X), len(l_test_X))\n",
     "        knn_classifier.fit(l_train_X, l_train_y)\n",
     "        prediction = knn_classifier.predict(l_test_X)\n",
     "\n",
-    "        accuracy = multiclass_accuracy(predict, test_y)\n",
-    "        print(\"Accuracy: %4.2f\" % accuracy)\n",
-    "        _, _, f1, _ = binary_classification_metrics(prediction, l_test_y)\n",
-    "        f1_list.append(f1)\n",
+    "        acc = multiclass_accuracy(prediction, l_test_y)\n",
+    "        print(\"Accuracy: %4.2f\" % acc)\n",
+    "        f1_list.append(acc)\n",
     "        \n",
     "    k_to_f1[k] = sum(f1_list) / num_folds\n",
     "\n",
     "for k in sorted(k_to_f1):\n",
-    "    print('k = %d, f1 = %f' % (k, k_to_f1[k]))"
+    "    print('k = %d, accuracy = %f' % (k, k_to_f1[k]))"
    ]
   },
   {
@@ -3653,120 +3877,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[7] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[7] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[7] [1]\n",
-      "[7] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[7] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[7] [1]\n",
-      "[7] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[7] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[7] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[7] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[7] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[7] [1]\n",
-      "[7] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[7] [1]\n",
-      "[7] [1]\n",
-      "[7] [1]\n",
-      "[4] [1]\n",
-      "[7] [1]\n",
-      "[7] [1]\n",
-      "[4] [1]\n",
-      "[7] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[7] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[7] [1]\n",
-      "[4] [1]\n",
-      "[7] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[7] [1]\n",
-      "[4] [1]\n",
-      "[7] [1]\n",
-      "[4] [1]\n",
-      "[6] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[7] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "[4] [1]\n",
-      "Accuracy: 0.00\n"
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 6 7] [1 1 1 1 3]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 6 7] [1 1 1 1 3]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 6 7] [1 1 1 1 3]\n",
+      "[1 2 3 6 7] [1 1 1 1 3]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 6 7] [1 1 1 1 3]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 6 7] [1 1 1 1 3]\n",
+      "[1 2 4 5 6 7] [1 1 1 1 1 2]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[2 3 5 6 7] [1 1 1 1 3]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[2 3 4 6 7] [1 1 1 1 3]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 6 7] [1 1 1 1 3]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[2 3 5 6 7] [1 1 1 1 3]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 6 7] [1 1 1 1 3]\n",
+      "[2 4 5 6 7] [1 1 1 1 3]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[2 3 4 6 7] [1 1 1 1 3]\n",
+      "[1 2 3 6 7] [1 1 1 1 3]\n",
+      "[2 3 5 6 7] [1 1 1 1 3]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 6 7] [1 1 1 1 3]\n",
+      "[1 2 3 6 7] [1 1 1 1 3]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[2 3 5 6 7] [1 1 1 1 3]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 6 7] [1 1 1 1 3]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 6 7] [1 1 1 1 3]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 6 7] [1 1 1 1 3]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[2 3 5 6 7] [1 1 1 1 3]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 6 7] [1 1 1 1 3]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 6 7 8] [1 1 1 3 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 6 7] [1 1 1 1 3]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[1 2 3 4 5 9] [2 1 1 1 1 1]\n",
+      "[2 3 4 5 6 7 9] [1 1 1 1 1 1 1]\n",
+      "Accuracy: 0.10\n"
      ]
     }
    ],
    "source": [
     "# TODO Set the best k as a best from computed\n",
-    "best_k = 1\n",
+    "best_k = 7\n",
     "\n",
     "best_knn_classifier = KNN(k=best_k)\n",
     "best_knn_classifier.fit(train_X, train_y)\n",
@@ -3775,6 +3999,15 @@
     "# Accuracy should be around 20%!\n",
     "accuracy = multiclass_accuracy(prediction, test_y)\n",
     "print(\"Accuracy: %4.2f\" % accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.argpartition()"
    ]
   }
  ],
